See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.69.00

              pamcrater: Add -verbose.

              ppmtoarbtxt: Fail if a #() escape sequence runs off end of
              file or is too long to process; before, the program would
              treat the text from # to EOF or where the buffer filled up
              as literal text, even ignoring any #() within.

              NetBSD: show actual numbers in messages instead of "f" or
              no information, by using NetBSD's vasprintf.

              Make %g in messages display the actual number instead of "g" in
              messages where platform doesn't have vasprintf.  (But scores of
              %f are still left).

              anytopnm: convert all images in a multi-image GIF instead of
              just the first.

              ppmtoarbtxt: Fix some undefined behavior when program limits
              are exceeded (i.e. buffer overruns).

              pambackground: fix bug: segfault or incorrect results in most
              cases.  Thanks Ludolf Holzheid (ludolf.holzheid@gmx.de).
              Introduced in Netpbm 10.37 (December 2006).

              Windows build: fix universal build failure with "No rule to make
              ...icon.netpbm.oLINKERISCOMPILER...".  Broken in Netpbm 10.67
              (June 2014).

14.09.26 BJH  Release 10.68.00

              Split pgmcrater into pamcrater and pamshadedrelief.

              pnmconvol: add -bias .

              Remove pnmcomp, install a pnmcomp symlink for pamcomp.

              Fix incorrect option parsing when there are multiple common
              options (e.g. -plain -quiet).  Always broken.  (Possibility of
              specifying multiple common options that don't cause the program
              to ignore every other option (like -version) was new in Netpbm
              10.10 (October 2002).
