@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.69.00
 
+              ppmtoarbtxt: Do some validation of format strings.  Thanks
+              Prophet of the Way <afu@wta.att.ne.jp>.
+
               pamcrater: Add -verbose.
 
               ppmtoarbtxt: Fail if a #() escape sequence runs off end of
